--- a/Code/index.html
+++ b/Code/index.html
@@ -40,7 +40,7 @@
             <section class="row welcome align-items-center d-flex justify-content-left">
                 <div class="col-12 col-md-8 col-lg-6 text-wrap">
                     <p>A Sorokmenti mezőgazdasági Szövetkezet magyar tulajdonú vállalat. <br> 1968-tól működő, Nyugat-Magyarországi mezőgazdasági terményeket előállító és kereskedő üzemévé fejlődött.</p>
-                    <p><a id="button" href="#rolunk">Olvasson többet</a> vagy vegye fel velünk a <a href="#kapcsolat">Kapcsolatot</a></p>
+                    <p><a href="#rolunk">Olvasson többet</a> vagy vegye fel velünk a <a href="#kapcsolat">Kapcsolatot</a></p>
                 </div>
             </section>
             <!-- Welcome End -->
@@ -118,7 +118,7 @@
             <!-- Footer Start -->
             <footer class="row text-center">
                 <div class="text-wrap accent text-center">
-                    <span>Made by <a target="_blank" href="https://szakacsgergo.com/">Szakács Gergő</a></span>
+                    <span>Made by <a target="_blank" href="https://szakacsgergo.com/">Szakács Gergő</a>.</span>
                 </div>
             </footer>
             <!-- Footer End -->
