--- a/Code/index.html
+++ b/Code/index.html
@@ -118,7 +118,7 @@
             <!-- Footer Start -->
             <footer class="row text-center">
                 <div class="text-wrap accent text-center">
-                    <span>Made by <a target="_blank" href="https://szakacsgergo.com/">Szakács Gergő</a>.</span>
+                    <span>Designed and Developed by  <a target="_blank" href="https://szakacsgergo.com/">Szakács Gergő</a>.</span>
                 </div>
             </footer>
             <!-- Footer End -->
